--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "ecommerce",
+  "name": "new-tss-react-ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.0",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.5",
-    "react-loading-skeleton": "^3.1.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.4.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
+    "react-router-dom": "^6.13.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
